# mlrs

./: Cargo.toml  README.md
classical-ml/: Cargo.toml
data-pipeline/: Cargo.toml
data-pipeline/src/: lib.rs
deep-learning/: Cargo.toml
mlrs-cli/: Cargo.toml
mlrs-cli/src/: main.rs
model-server/: Cargo.toml
nlp/: Cargo.toml
