[workspace]
members = [
    "data-pipeline",
    "classical-ml",
    "deep-learning",
    "nlp",
    "model-server",
    "mlrs-cli",
]
resolver = "2"

[workspace.dependencies]
ndarray       = "0.16"
rayon         = "1.10"
tokio         = { version = "1", features = ["full"] }
serde         = { version = "1.0", features = ["derive"] }
serde_json    = "1.0"
thiserror     = "1.0"
anyhow        = "1.0"
polars        = { version = "0.46", features = ["lazy", "csv", "parquet"] }
linfa         = "0.7"
burn          = { version = "0.15", features = ["ndarray"] }
candle-core   = "0.8"
axum          = "0.8"
